# SLE

my_lib/: .gitignore  CMakeLists.txt
my_lib/my/: .CSR_matrix.h.swp  .Matrix.h.swp  .t.cpp.swp  CMakeLists.txt  CSR_matrix.h  MSI.cpp  Matrix.h  a.out  opa  t.cpp  vec.h
my_lib/test/: .test_csr_matrix.cpp.swp  CMakeLists.txt  test.cpp  test_Gauzzeid.cpp  test_csr_matrix.cpp  test_matrix.cpp  test_vec.cpp
my_lib/test/tests/: test_2.cpp
